openscholar/themes/hwpi_vibrant/css/hwpi_vibrant.css
html,body {
    background: #fff;
    color: #1e1e1e;
}
body.front {
    overflow-y: hidden;
}
/** * - Leave this until after we know about the slideshow issue: https: //github.com/openscholar/openscholar/issues/1646 * - Set to full width for vibrant, we need to set the gradient */#columns {
    margin-left: auto;
    margin-right: auto;
    margin-top: 0;
    width: auto;
    background-image: url(../images/standard-body-gradient.png);
    background-repeat: repeat-x;
    background-position: 0 0;
}
body.front #columns {
    background-position: 0 -252px;
}
#content-panels {
    border-right: none;
    border-left: none;
}
body.no-sidebars .content-top-slideshow-enabled .region-content-top {
    position: relative;
}
body.no-sidebars .content-top-slideshow-enabled #content-panels .region-content-top .block {
    margin-bottom: 0;
}
.front.no-sidebars .region-content-top .block-boxes-os_slideshow_box:after {
    background: #252525;
    bottom: auto;
    content: "";
    display: block;
    height: 100%;
    left: -1000px;
    position: absolute;
    right: auto;
    top: 0;
    width: 3000px;
    z-index: 0;
}
body.front.no-sidebars .content-top-slideshow-enabled #columns .hg-container {
    padding-top: 0;
}
body.no-sidebars .content-top-slideshow-enabled #columns .contextual-controls-wrapper {
    right: -45px;
    top: 0;
}
body.no-sidebars .content-top-slideshow-enabled #content-panels .region-content-top .block-inner {
    margin-top: 0;
    overflow: hidden;
}
body.no-sidebars .content-top-slideshow-enabled #menu-bar {
    border-bottom: 0;
}
.view-os-image-gallery-slideshow {
    background: #252525;
    border: 0;
}
.block-boxes-os_boxes_slideshow {
    border-top: 0 !important;
}
.block-boxes-os_boxes_slideshow .block-inner,.block-boxes-os_boxes_slideshow .views-row {
    margin: 0;
    padding: 0;
}
.block-boxes-os_boxes_slideshow .views_slideshow_slide img {
    line-height: 0;
    padding: 0;
}
.hg-container {
    margin-left: auto;
    margin-right: auto;
    padding-top: 40px;
    width: 980px;
}
.not-front .hg-container {
    padding-top: 65px;
}
.not-front #content-column {
    font-size: 15px;
}
.page-node #content-column .content-inner,.not-front .content-inner {
    padding: 0 30px 20px;
    border: 1px solid #dededc;
    background: #fff;
    box-shadow: 0 1px 2px 0 #DEDEDC;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}
.region-inner {
    border: 0 !important;
}
a,a:visited {
    -webkit-transition: all 0.25s linear;
    -moz-transition: all 0.25s linear;
    -ms-transition: all 0.25s linear;
    -o-transition: all 0.25s linear;
    transition: all 0.25s linear;
}
div.contextual-links-wrapper a,.contextual-controls-wrapper div.ctools-dropdown.section_links a.ctools-dropdown-text-link {
    -webkit-transition: none;
    -moz-transition: none;
    -ms-transition: none;
    -o-transition: none;
    transition: none;
}

.block-boxes-os_boxes_html .block-content ul,
.block-content .field-name-body ul {
    list-style-type: disc;
}
.block-boxes-os_boxes_html .block-content ol,
.block-content .field-name-body ol {
    list-style-type: decimal;
}
.field-name-body ol {
    margin: 0 0 1.5em 25px;
}
#header {
    background: #e8e8e8;
    color: #303030;
}
#boxes-box-site_info,#boxes-box-site_info a {
    color: #303030;
}
#menu-bar {
    background: #e8e8e8;
    padding: 0 0 30px;
    min-height: 39px;
}
#menu-bar nav {
    background: #fff;
    -webkit-border-radius: 2px;
    border-radius: 2px;
    -webkit-box-shadow: 0px 1px 1px 1px #dededc;
    box-shadow: 0px 1px 1px 1px #dededc;
}
#menu-bar a,#menu-bar a:visited {
    -webkit-transition: color 0.25s linear;
    -moz-transition: color 0.25s linear;
    -ms-transition: color 0.25s linear;
    -o-transition: color 0.25s linear;
    transition: color 0.25s linear;
}
.lt-ie9 #menu-bar nav {
    border: 1px solid #dededc;
    border-bottom-width: 2px;
}
#menu-bar nav > ul.menu {
    padding: 0 8px 0 0;
}
#menu-bar ul.nice-menu a.active, #menu-bar ul.nice-menu a:hover,#menu-bar ul.nice-menu a.active:hover {
    background: #303030;
    color: #FFFFFF;
}
#menu-bar ul a,#menu-bar ul.nice-menu a,#menu-bar ul.nice-menu .menuparent a {
    color: #303030;
    font-family: Georgia, Baskerville, Palatino, 'Palatino Linotype', 'Book Antiqua', 'Times New Roman', serif;
    font-weight: normal;
    padding: 12px 15px;
    background: transparent;
    background-image: none;
}
#menu-bar ul.nice-menu li {
    margin-right: 0;
}
#menu-bar ul.nice-menu .menuparent {
    padding-right: 0;
}
#menu-bar ul.nice-menu .menuparent a:hover,#menu-bar ul.nice-menu .menuparent a.active {
    padding-right: 15px;
}
#menu-bar ul > li > a:hover,#menu-bar ul > li > a.active,#menu-bar ul.nice-menu a:hover,#menu-bar ul.nice-menu li.menuparent:hover a,#menu-bar ul.nice-menu .menuparent a.active {
    background: #282828;
    background: -moz-linear-gradient(top, #313131 0%, #282828 100%);
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#313131), color-stop(100%,#282828));
    background: -webkit-linear-gradient(top, #313131 0%,#282828 100%);
    background: -o-linear-gradient(top, #313131 0%,#282828 100%);
    background: -ms-linear-gradient(top, #313131 0%,#282828 100%);
    background: linear-gradient(to bottom, #313131 0%,#282828 100%);
    filter: progid: DXImageTransform.Microsoft.gradient( startColorstr='#313131', endColorstr='#282828',GradientType=0 );
}
#menu-bar ul.nice-menu a:hover,#menu-bar ul > li > a:hover,#menu-bar ul.nice-menu li.menuparent:hover a {
    color: #fff;
    -webkit-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
}
#menu-bar ul > li > a.active:hover {
    background: #fff;
    color: #1f1f1f;
}
#menu-bar ul.nice-menu li.menuparent:hover a.active {
    padding: 12px 15px;
    margin-top: 0;
    -webkit-border-radius: 3px 3px 0 0;
    border-radius: 3px 3px 0 0;
}
/* ... */

